--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon"  href="./public/logo2.avif" />
+    <link rel="icon" href="./public/logo2.avif" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
 
-    <title>Brew Haven</title>
+    <title>Wilma Resto</title>
   </head>
   <body>
     <div id="root"></div>
