--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="./public/logo2.avif" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=DynaPuff:wdth,wght@88.5,400..700&family=Oswald:wght@200..700&family=Oxygen:wght@300;400;700&family=Paytone+One&family=Quattrocento:wght@400;700&display=swap"
       rel="stylesheet"
     />
 
